--- a/stylesheets/blog-stylesheets.css
+++ b/stylesheets/blog-stylesheets.css
@@ -8,6 +8,7 @@
 
 }
 h1 {
+  font-size: 50px;
   font-family: cursive;
   font-weight: bold;
   text-decoration: none;
@@ -48,5 +49,8 @@ a {
 img {
   margin-right: auto;
   margin-left: auto;
-  width: 20%;
+  width: 30%;
+  border: 2px solid black;
 }
+
+
