--- a/stylesheets/homepage.css
+++ b/stylesheets/homepage.css
@@ -8,6 +8,7 @@ img {
   margin-top: 50px;
   margin-left: 75px;
   display: inline-block;
+  float: left;
 }
 
 h1 {
@@ -17,6 +18,7 @@ h1 {
   margin-right: 180px;
   font-family: 'Lobster', cursive;
   text-align: center;
+  float: right;
 }
 
 .center {
