--- a/stylesheets/mywebsite.css
+++ b/stylesheets/mywebsite.css
@@ -19,6 +19,7 @@ span {
 img {
   width: 600px;
   height: 600px;
+  float: right;
   display: inline-block;
   margin-top: 15px;
   margin-right: 10px;
