--- a/stylesheets/blog-stylesheets.css
+++ b/stylesheets/blog-stylesheets.css
@@ -50,7 +50,7 @@ img {
   margin-right: auto;
   margin-left: auto;
   width: 30%;
-  border: 2px solid black;
+  border: 2px solid #66FFCC;
 }
 
 code {
