--- a/cheatsheet.css
+++ b/cheatsheet.css
@@ -1,9 +1,9 @@
-div {
-  display: inline;
-  width: 20%;
-}
 
 h3 {
   text-align:center;
   display:block;
+}
+
+table, th, td {
+    border: 1px solid black;
 }
