Add relative path to all pics

--- a/stylesheets/education.css
+++ b/stylesheets/education.css
@@ -15,3 +15,9 @@ img {
   font-family: 'Lobster', cursive;
   text-decoration: none;
 }
+
+h3 {
+  text-align: center;
+  color: white;
+  font-family: 'Lobster', cursive;
+}
