--- a/stylesheets/education.css
+++ b/stylesheets/education.css
@@ -1,9 +1,8 @@
 img {
-  text-align: center;
   display: block;
   height: 350px;
-  width: 700px;
-  margin-left: 300px;
+  width: 50%;
+  margin-left: 25%;
   border: 2px solid white;
 }
 
