--- a/stylesheets/homepage.css
+++ b/stylesheets/homepage.css
@@ -3,8 +3,9 @@
 }
 
 img {
-  margin-top: 50px;
-  margin-left: 75px;
+  margin-top: 5%;
+  margin-bottom: 10%;
+  margin-left: 10%;
   display: inline-block;
   float: left;
 }
@@ -13,17 +14,27 @@ img {
 h1 {
   color: white;
   display: inline-block;
-  margin-top: 215px;
-  margin-right: 180px;
+  margin-top: 20%;
+  margin-right: 10%;
   font-family: 'Lobster', cursive;
   text-align: center;
   float: right;
 }
 
-.center {
-  color: white;
-  font-family: 'Lobster', cursive;
+.logo {
   display: inline-block;
-  margin-left: 100px;
+  height: 60 px;
+  width: 60 px;
+}
+
+.center {
+  text-align: center;
+  padding-bottom: 20px;
+}
+
+a {
+  font-family: perpetua, georgia;
+  text-decoration: none;
+  color: white;
 }
 
