--- a/stylesheets/homepage.css
+++ b/stylesheets/homepage.css
@@ -14,7 +14,7 @@ img {
 h1 {
   color: white;
   display: inline-block;
-  margin-top: 20%;
+  margin-top: 19%;
   margin-right: 10%;
   font-family: 'Lobster', cursive;
   text-align: center;
@@ -26,8 +26,14 @@ h1 {
 }
 
 a {
-  font-family: perpetua, georgia;
+  font-family: 'Lobster', cursive;
   text-decoration: none;
+  color: white;
+}
+
+h3 {
+  text-align: center;
+  font-family: 'Lobster', cursive;
   color: white;
 }
 
