--- a/stylesheets/homepage.css
+++ b/stylesheets/homepage.css
@@ -37,19 +37,11 @@ h3 {
   color: white;
 }
 
-.logo {
+div {
   margin-top: 0;
   margin-bottom: 0;
 }
 
-#logos {
-  margin-top: 0;
-  margin-bottom: 0;
+.logo {
   margin-left: 0;
 }
-
-
-
-
-
-
