--- a/projects/ProjectIndex.css
+++ b/projects/ProjectIndex.css
@@ -10,6 +10,7 @@ h1 {
   text-align: center;
   color: white;
   font-family: perpetua, georgia;
+  font-style: underline;
 }
 
 h3 {
@@ -30,4 +31,8 @@ a {
   font-family: perpetua, georgia;
   text-decoration: none;
   color: white;
+}
+
+#cheatsheet {
+  background-color: white;
 }
