--- a/projects/ProjectIndex.css
+++ b/projects/ProjectIndex.css
@@ -1,9 +1,9 @@
-background {
-  position: fixed;
-  top: 0;
-  left: 0;
-  min-width: 100%;
-  min-height: 100%;
+html {
+  background: "../website-pics/codewallpaper.jpg" no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
 }
 
 h1 {
