Play with background

--- a/projects/ProjectIndex.css
+++ b/projects/ProjectIndex.css
@@ -1,9 +1,11 @@
-html {
-  background: "../website-pics/codewallpaper.jpg" no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
+background {
+  min-height: 100%;
+  min-width: 100%;
+  width: 100%;
+  height: auto;
+  position: fixed;
+  top: 0;
+  left: 0;
 }
 
 h1 {
