--- a/stylesheets/education.css
+++ b/stylesheets/education.css
@@ -1,3 +1,11 @@
+background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  min-width: 100%;
+  min-height: 100%;
+}
+
 img {
   display: block;
   height: 350px;
@@ -6,7 +14,7 @@ img {
   border: 2px solid white;
 }
 
-* {
+#DBC {
   background-color: black;
 }
 
