--- a/stylesheets/homepage.css
+++ b/stylesheets/homepage.css
@@ -1,5 +1,9 @@
-* {
-  background-color: black;
+background {
+  position: fixed;
+  top: 0;
+  left: 0;
+  min-width: 100%;
+  min-height: 100%;
 }
 
 img {
