--- a/stylesheets/mywebsite.css
+++ b/stylesheets/mywebsite.css
@@ -6,8 +6,8 @@
 h1 {
   font-size: 120px;
   display: inline-block;
-  margin-top: 218px;
-  padding-left: 30px;
+  margin-top: 18%;
+  margin-left: 2%;
   font-family: 'Lobster', cursive;
   color: white;
 }
@@ -17,11 +17,11 @@ span {
 }
 
 img {
-  width: 600px;
-  height: 600px;
+  width: 45%;
+  height: 45%;
   float: right;
   display: inline-block;
-  margin-top: 15px;
-  margin-right: 10px;
-
+  margin-top: 2%;
+  margin-bottom: 2%;
+  margin-right: 2%;
 }
