--- a/stylesheets/mywebsite.css
+++ b/stylesheets/mywebsite.css
@@ -21,6 +21,7 @@ img {
   height: 45%;
   float: right;
   display: inline-block;
+  position: fixed;
   margin-top: 2%;
   margin-bottom: 2%;
   margin-right: 2%;
