--- a/stylesheets/homepage.css
+++ b/stylesheets/homepage.css
@@ -19,7 +19,8 @@ h1 {
   color: white;
   display: inline-block;
   margin-top: 19%;
-  margin-right: 10%;
+  margin-right: 30%;
+  margin-left: 5%;
   font-family: 'Lobster', cursive;
   text-align: center;
   float: right;
