--- a/stylesheets/homepage.css
+++ b/stylesheets/homepage.css
@@ -20,9 +20,10 @@ h1 {
   display: inline-block;
   margin-top: 19%;
   margin-right: 10%;
+  margin-left: 12%;
   font-family: 'Lobster', cursive;
   text-align: center;
-  float: right;
+
 }
 
 .center {
