Change background and px to em

--- a/stylesheets/homepage.css
+++ b/stylesheets/homepage.css
@@ -1,4 +1,5 @@
 background {
+  color: black;
   position: fixed;
   min-width: 100%;
   min-height: 100%;
@@ -47,5 +48,5 @@ div {
 }
 
 .logo {
-  margin-left: 20px;
+  margin-left: 1.2em;
 }
