--- a/stylesheets/homepage.css
+++ b/stylesheets/homepage.css
@@ -1,8 +1,8 @@
 background {
-  color: black;
-  position: fixed;
+  background-color: black;
+ /* position: fixed;
   min-width: 100%;
-  min-height: 100%;
+  min-height: 100%;*/
 }
 
 img {
