Change education descriptions and background back to black

--- a/stylesheets/education.css
+++ b/stylesheets/education.css
@@ -1,9 +1,13 @@
-background {
+/*background {
   position: fixed;
   top: 0;
   left: 0;
   min-width: 100%;
   min-height: 100%;
+}*/
+
+body {
+  background-color: black;
 }
 
 img {
