Change font family

--- a/website.css
+++ b/website.css
@@ -6,11 +6,11 @@ img {
 }
 
 h1 {
-  font-family: 'Teko', sans-serif;
+  font-family: 'Roboto Condensed', sans-serif;
   text-align: center;
 }
 
 h3 {
-  font-family: 'Teko', sans-serif;
+  font-family: 'Roboto Condensed', sans-serif;
   text-align: center;
 }
