--- a/website.css
+++ b/website.css
@@ -8,9 +8,11 @@ img {
 h1 {
   font-family: 'Roboto Condensed', sans-serif;
   text-align: center;
+  letter-spacing: -1px;
 }
 
-h3 {
+h2 {
   font-family: 'Roboto Condensed', sans-serif;
   text-align: center;
+  letter-spacing: -1px;
 }
