--- a/website.css
+++ b/website.css
@@ -9,11 +9,12 @@ h1 {
   font-family: 'Roboto Condensed', sans-serif;
   text-align: center;
   letter-spacing: -1px;
-  color:
+  font-weight: bold;
 }
 
 h2 {
   font-family: 'Roboto Condensed', sans-serif;
   text-align: center;
   letter-spacing: -1px;
+  font-weight: bold;
 }
