--- a/website.css
+++ b/website.css
@@ -5,16 +5,11 @@ img {
   margin-right: auto;
 }
 
-h1 {
+h1, h2, h3 {
   font-family: 'Roboto Condensed', sans-serif;
   text-align: center;
   letter-spacing: -1px;
   font-weight: bold;
 }
 
-h2 {
-  font-family: 'Roboto Condensed', sans-serif;
-  text-align: center;
-  letter-spacing: -1px;
-  font-weight: bold;
-}
+
