Add inline block style

--- a/website.css
+++ b/website.css
@@ -24,10 +24,12 @@ a {
 }
 
 #left {
+  display: inline-block;
   text-align: left;
 }
 
 #right {
+  display: inline-block;
   text-align: right;
 }
 
