--- a/website.css
+++ b/website.css
@@ -24,11 +24,13 @@ a {
   color: black;
 }
 
-/*.left {
+.left {
+  display: inline;
   text-align: left;
 }
 
 .right {
+  display: inline;
   text-align: right;
-}*/
+}
 
