Add span for right float

--- a/website.css
+++ b/website.css
@@ -23,13 +23,7 @@ a {
   color: black;
 }
 
-#left {
-  display: inline-block;
-  text-align: left;
-}
-
 #right {
-  display: inline-block;
-  text-align: right;
+  float: right;
 }
 
