--- a/website.css
+++ b/website.css
@@ -12,9 +12,12 @@ h1, h2 {
   font-weight: bold;
 }
 
-a {
+h3 {
   font-family: 'Roboto Condensed', sans-serif;
   font-weight: bold;
+}
+
+a {
   text-decoration: none;
   color: black;
 }
