Change margins for bottom nav

--- a/website.css
+++ b/website.css
@@ -13,6 +13,9 @@ h1, h2 {
 }
 
 h3 {
+  margin-top: 3%;
+  margin-right: 1%;
+  margin-left: 1%;
   font-family: 'Roboto Condensed', sans-serif;
   font-weight: bold;
 }
