--- a/website.css
+++ b/website.css
@@ -5,7 +5,7 @@ img {
   margin-right: auto;
 }
 
-h1, h2, p {
+h1, h2, h5 {
   font-family: 'Roboto Condensed', sans-serif;
   text-align: center;
   letter-spacing: -1px;
