--- a/website.css
+++ b/website.css
@@ -5,7 +5,7 @@ img {
   margin-right: auto;
 }
 
-h1, h2, h5 {
+h1, h2{
   font-family: 'Roboto Condensed', sans-serif;
   text-align: center;
   letter-spacing: -1px;
@@ -19,6 +19,13 @@ h3 {
   font-family: 'Roboto Condensed', sans-serif;
   font-weight: bold;
   letter-spacing: -1px;
+}
+
+h4 {
+  font-family: 'Roboto Condensed', sans-serif;
+  text-align: center;
+  letter-spacing: -1px;
+  text-transform: uppercase;
 }
 
 a {
