--- a/website.css
+++ b/website.css
@@ -5,7 +5,7 @@ img {
   margin-right: auto;
 }
 
-h1, h2{
+h1, h2 {
   font-family: 'Roboto Condensed', sans-serif;
   text-align: center;
   letter-spacing: -1px;
@@ -21,8 +21,9 @@ h3 {
   letter-spacing: -1px;
 }
 
-h4 {
+p {
   font-family: 'Roboto Condensed', sans-serif;
+  font-size: 10em;
   text-align: center;
   letter-spacing: -1px;
   text-transform: uppercase;
