--- a/website.css
+++ b/website.css
@@ -5,7 +5,7 @@ img {
   margin-right: auto;
 }
 
-h1, h2 {
+h1, h2, h4 {
   font-family: 'Roboto Condensed', sans-serif;
   text-align: center;
   letter-spacing: -1px;
@@ -21,17 +21,13 @@ h3 {
   letter-spacing: -1px;
 }
 
-p {
-  font-family: 'Roboto Condensed', sans-serif;
-  font-size: 10em;
-  text-align: center;
-  letter-spacing: -1px;
-  text-transform: uppercase;
-}
-
 a {
   text-decoration: none;
   color: black;
+}
+
+.uppercase {
+  text-transform: uppercase;
 }
 
 #right {
