--- a/website.css
+++ b/website.css
@@ -5,7 +5,7 @@ img {
   margin-right: auto;
 }
 
-h1, h2, h4 {
+h1, h2 {
   font-family: 'Roboto Condensed', sans-serif;
   text-align: center;
   letter-spacing: -1px;
@@ -19,6 +19,14 @@ h3 {
   font-family: 'Roboto Condensed', sans-serif;
   font-weight: bold;
   letter-spacing: -1px;
+}
+
+p {
+  font-family: 'Roboto Condensed', sans-serif;
+  text-align: center;
+  letter-spacing: -1px;
+  font-weight: bold;
+  font-size: 1.17em;
 }
 
 a {
