--- a/website.css
+++ b/website.css
@@ -1,8 +1,12 @@
-#ven {
-  width: 55%;
+img {
   display: block;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 10%
+}
+
+#ven {
+  width: 55%;
 }
 
 h1, h2 {
