--- a/website.css
+++ b/website.css
@@ -2,7 +2,8 @@ img {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  padding-bottom: 10%;
+  padding-bottom: 75%;
+  width: 100%;
 }
 
 #ven {
