--- a/website.css
+++ b/website.css
@@ -2,12 +2,14 @@ img {
   display: block;
   margin-left: auto;
   margin-right: auto;
-  padding-bottom: 75%;
-  width: 100%;
 }
 
 #ven {
   width: 55%;
+}
+
+#cities {
+  padding-bottom: 10%;
 }
 
 h1, h2 {
