--- a/website.css
+++ b/website.css
@@ -1,4 +1,4 @@
-img {
+/*img {
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -6,7 +6,7 @@ img {
 
 #cities {
   padding-bottom: 10%;
-}
+}*/
 
 h1, h2 {
   font-family: 'Roboto Condensed', sans-serif;
