--- a/stylesheets/website.css
+++ b/stylesheets/website.css
@@ -1,3 +1,17 @@
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+#ven {
+  width: 55%;
+}
+
+#cities {
+  padding-bottom: 10%;
+}
+
 h1, h2 {
   font-family: 'Roboto Condensed', sans-serif;
   text-align: center;
