--- a/stylesheets/website.css
+++ b/stylesheets/website.css
@@ -23,6 +23,10 @@ h1, h2 {
   font-weight: bold;
 }
 
+h1 {
+  color: #8D1919;
+}
+
 h3 {
   margin-top: 3%;
   margin-right: 1%;
@@ -47,7 +51,7 @@ a {
 }
 
 #vendable {
-  color: #85D6FF;
+  color: #6DCDEE;
 }
 
 #portfolio {
