--- a/stylesheets/website.css
+++ b/stylesheets/website.css
@@ -23,10 +23,6 @@ h1, h2 {
   font-weight: bold;
 }
 
-h1 {
-  color: #8D1919;
-}
-
 h3 {
   margin-top: 3%;
   margin-right: 1%;
@@ -58,7 +54,9 @@ a {
   margin-top: 6em;
 }
 
-
+.scarlett {
+  color: #8D1919;
+}
 
 
 
