--- a/stylesheets/website.css
+++ b/stylesheets/website.css
@@ -16,14 +16,14 @@ img {
   width: 30%;
 }
 
-h1, h2 {
+h1, h2, h3 {
   font-family: 'Roboto Condensed', sans-serif;
   text-align: center;
   letter-spacing: -1px;
   font-weight: bold;
 }
 
-h3 {
+.footer {
   margin-top: 3%;
   margin-right: 1%;
   margin-left: 1%;
@@ -48,6 +48,15 @@ a {
 
 #vendable {
   color: #6DCDEE;
+}
+
+#portfolio {
+  margin-top: 0;
+  margin-right: 1%;
+  margin-left: 1%;
+  font-family: 'Roboto Condensed', sans-serif;
+  font-weight: bold;
+  letter-spacing: -1px;
 }
 
 .scarlett {
