--- a/stylesheets/website.css
+++ b/stylesheets/website.css
@@ -1,8 +1,8 @@
-img {
+/*img {
   display: block;
   margin-left: auto;
   margin-right: auto;
-}
+}*/
 
 #ven {
   width: 55%;
@@ -79,6 +79,17 @@ a {
 
 #networks {
   text-align: center;
+}
+
+.circle {
+  width:500px;
+  height:500px;
+  border-radius:50%;
+  font-size:50px;
+  color:#fff;
+  line-height:500px;
+  text-align:center;
+  background:#000;
 }
 
 
