--- a/stylesheets/website.css
+++ b/stylesheets/website.css
@@ -82,14 +82,17 @@ a {
 }
 
 .circle {
-  width:500px;
-  height:500px;
+  width:400px;
+  height:400px;
   border-radius:50%;
+  font-family: 'Roboto Condensed', sans-serif;
   font-size:50px;
-  color:#fff;
-  line-height:500px;
+  letter-spacing: -1px;
+  font-weight: bold;
+  color:#000;
+  line-height:400px;
   text-align:center;
-  background:#000;
+  background:#FF1919;
 }
 
 
