--- a/stylesheets/website.css
+++ b/stylesheets/website.css
@@ -82,17 +82,27 @@ a {
 }
 
 .circle {
-  width:400px;
-  height:400px;
+  display: inline-block;
+  width:450px;
+  height:450px;
   border-radius:50%;
   font-family: 'Roboto Condensed', sans-serif;
   font-size:50px;
   letter-spacing: -1px;
   font-weight: bold;
   color:#000;
-  line-height:400px;
+  line-height:450px;
   text-align:center;
-  background:#FF1919;
+}
+
+.right-circle {
+  background:#E60000;
+  float: right;
+}
+
+.left-circle {
+  background:#6DCDEE;
+  float: left;
 }
 
 
