--- a/stylesheets/website.css
+++ b/stylesheets/website.css
@@ -95,17 +95,29 @@ a {
   text-align:center;
 }
 
+#ven {
+    width: 1000px;
+    height: 500px;
+    text-align: center;
+    vertical-align: middle;
+    position: relative;
+}
+
 .left-circle {
   background-color:#E60000;
-  float: left;
-  margin-left: 10%;
 }
 
 .right-circle {
   background-color:#6DCDEE;
-  float: right;
-  margin-right: 10%;
+  margin-left: -30px;
 }
+
+.right-circle::before {
+  content: 'MAGIC';
+  position: absolute;
+  left: 10px
+}
+
 
 
 
