--- a/stylesheets/website.css
+++ b/stylesheets/website.css
@@ -1,12 +1,12 @@
-/*img {
+img {
   display: block;
   margin-left: auto;
   margin-right: auto;
-}*/
-
-#ven {
-  width: 55%;
 }
+
+/*#ven {
+  width: 55%;
+}*/
 
 #cities {
   padding-bottom: 2.5em;
@@ -19,14 +19,10 @@
 h1, h2{
   font-family: 'Roboto Condensed', sans-serif;
   text-align: center;
-  letter-spacing: -1px;
-  font-weight: bold;
 }
 
 h3 {
   font-family: 'Roboto Condensed', sans-serif;
-  letter-spacing: -1px;
-  font-weight: bold;
 }
 
 .footer {
@@ -34,8 +30,6 @@ h3 {
   margin-right: 1%;
   margin-left: 1%;
   font-family: 'Roboto Condensed', sans-serif;
-  font-weight: bold;
-  letter-spacing: -1px;
 }
 
 a {
@@ -61,8 +55,6 @@ a {
   margin-right: 1%;
   margin-left: 1%;
   font-family: 'Roboto Condensed', sans-serif;
-  font-weight: bold;
-  letter-spacing: -1px;
 }
 
 .scarlett {
@@ -81,16 +73,17 @@ a {
   text-align: center;
 }
 
+#venn div{
+  height: 450px;
+  width: 450px;
+  border-radius:50%;
+  opacity: .8;
+}
+
 .circle {
   display: inline-block;
-  width:450px;
-  height:450px;
-  border-radius:50%;
   font-family: 'Roboto Condensed', sans-serif;
   font-size:50px;
-  letter-spacing: -1px;
-  font-weight: bold;
-  font-color:#000;
   line-height:450px;
   text-align:center;
 }
@@ -101,12 +94,13 @@ a {
 
 .right-circle {
   background-color:#6DCDEE;
+  margin-left: -100px;
 }
 
-.right-circle::before {
-  content: 'MAGIC';
-  position: absolute;
-  left: 385px;
+.middle {
+  text-align: center;
+  font-family: 'Roboto Condensed', sans-serif;
+  font-size:40px;
 }
 
 
