--- a/stylesheets/website.css
+++ b/stylesheets/website.css
@@ -86,7 +86,7 @@ a {
   width: 450px;
   border-radius:50%;
   opacity: .8;
-  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=.8)";
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
   behavior: url(/pie/PIE.htc);
 }
 
