--- a/stylesheets/website.css
+++ b/stylesheets/website.css
@@ -33,7 +33,8 @@ h3 {
   font-family: 'Roboto Condensed', sans-serif;
 }
 
-.footer {
+#footer {
+  float:bottom;
   margin-top: 3%;
   margin-right: 1%;
   margin-left: 1%;
@@ -91,6 +92,7 @@ a {
 
 #venn {
   text-align: center;
+  padding-top: 1em;
 }
 
 .circle {
