Change education img sizes and margins to center in grid

--- a/stylesheets/website.css
+++ b/stylesheets/website.css
@@ -17,15 +17,17 @@ img {
 }
 
 #berkeley {
-  width: 45%;
+  width: 80%;
+  margin-top: 2em;
 }
 
 #mcc {
-  width: 55%;
+  margin-top: 2em;
 }
 
 #dbc {
-  width: 70%;
+  width: 95%;
+  margin-top: 2em;
 }
 
 h1, h2{
