--- a/stylesheets/website.css
+++ b/stylesheets/website.css
@@ -40,10 +40,15 @@ h3 {
 }
 
 #footer {
-  float: bottom;
   padding-right: 1em;
   padding-left: 1em;
   font-family: 'Roboto Condensed', sans-serif;
+  width: 100%;
+  height: 100px;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
 }
 
 a {
