--- a/stylesheets/website.css
+++ b/stylesheets/website.css
@@ -45,14 +45,13 @@ h3 {
 }
 
 #content {
-  padding-bottom:100px;
+  padding-bottom: 3em;
 }
 
 #footer {
   padding-right: 1em;
   padding-left: 1em;
   font-family: 'Roboto Condensed', sans-serif;
-  height:100px;
   position: absolute;
   bottom: 0;
   left: 0;
