--- a/stylesheets/ie.css
+++ b/stylesheets/ie.css
@@ -1,3 +1,9 @@
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 #berkeley {
   width: 45%;
 }
@@ -8,4 +14,46 @@
 
 #dbc {
   width: 70%;
+}
+
+h1, h2{
+  font-family: 'Roboto Condensed', sans-serif;
+  text-align: center;
+}
+
+h3 {
+  font-family: 'Roboto Condensed', sans-serif;
+}
+
+#wrapper {
+  min-height:100%;
+  position:relative;
+}
+
+#content {
+  padding-bottom: 3em;
+}
+
+#footer {
+  padding-right: 1em;
+  padding-left: 1em;
+  font-family: 'Roboto Condensed', sans-serif;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+a {
+  text-decoration: none;
+  color: black;
+}
+
+#right {
+  text-align: right;
+  float: right;
+}
+
+.scarlett {
+  color: #8D1919;
 }
