--- a/stylesheets/skeleton.css
+++ b/stylesheets/skeleton.css
@@ -30,7 +30,7 @@
 }
 
 /* For devices larger than 550px */
-@media (min-width: 550px) {
+@media all and (min-width: 550px) {
   .container {
     width: 80%; }
   .column,
