--- a/stylesheets/website.css
+++ b/stylesheets/website.css
@@ -1,33 +1,9 @@
+/*General */
+
 img {
   display: block;
   margin-left: auto;
   margin-right: auto;
-}
-
-/*#ven {
-  width: 55%;
-}*/
-
-#cities {
-  padding-bottom: 2.5em;
-}
-
-.one-third {
-  text-align: center;
-}
-
-#berkeley {
-  width: 80%;
-  margin-top: 2em;
-}
-
-#mcc {
-  margin-top: 2em;
-}
-
-#dbc {
-  width: 95%;
-  margin-top: 2em;
 }
 
 h1, h2{
@@ -39,13 +15,18 @@ h3 {
   font-family: 'Roboto Condensed', sans-serif;
 }
 
+a {
+  text-decoration: none;
+  color: black;
+}
+
+.scarlett {
+  color: #8D1919;
+}
+
 #wrapper {
   min-height:100%;
   position:relative;
-}
-
-#about-me-content {
-  padding-bottom: 3em;
 }
 
 #footer {
@@ -57,39 +38,17 @@ h3 {
   right: 0;
 }
 
-a {
-  text-decoration: none;
-  color: black;
-}
-
 #right {
   text-align: right;
   float: right;
 }
 
-#artsee {
-  color: #E60000;
-}
 
-#vendable {
-  color: #6DCDEE;
-}
+/*Index page */
 
-.scarlett {
-  color: #8D1919;
-}
-
-.logo {
-  display: inline;
-  padding: 1em;
-  padding-bottom: 0;
-  height: 50px;
-  width: 50px;
-}
-
-#networks {
-  text-align: center;
-}
+/*#ven {
+  width: 55%;
+}*/
 
 #venn div{
   height: 450px;
@@ -135,3 +94,56 @@ hr {
 }
 
 
+/*About me page*/
+
+#cities {
+  padding-bottom: 2.5em;
+}
+
+#about-me-content {
+  padding-bottom: 3em;
+}
+
+
+/*Education page*/
+
+.one-third {
+  text-align: center;
+}
+
+#berkeley {
+  width: 80%;
+  margin-top: 2em;
+}
+
+#mcc {
+  margin-top: 2em;
+}
+
+#dbc {
+  width: 95%;
+  margin-top: 2em;
+}
+
+
+/*Portfolio page*/
+
+#artsee {
+  color: #E60000;
+}
+
+#vendable {
+  color: #6DCDEE;
+}
+
+#networks {
+  text-align: center;
+}
+
+.logo {
+  display: inline;
+  padding: 1em;
+  padding-bottom: 0;
+  height: 50px;
+  width: 50px;
+}
