--- a/stylesheets/ie.css
+++ b/stylesheets/ie.css
@@ -1,3 +1,5 @@
+/*Education page- code taken from skeleton.css then modified without media queries*/
+
   .container {
     width: 80%; }
   .column,
@@ -107,3 +109,42 @@ form {
   content: "";
   display: table;
   clear: both; }
+
+
+/*Index page- code taken from website.css then modified without vw's*/
+
+#venn div{
+  height: 450px;
+  width: 450px;
+  border-radius: 50%;
+  opacity: .8;
+  behavior: url(/stylesheets/PIE.htc);
+}
+
+#venn {
+  text-align: center;
+  padding-top: 1em;
+}
+
+.circle {
+  display: inline-block;
+  font-family: 'Roboto Condensed', sans-serif;
+  font-size: 50px;
+  line-height: 450px;
+  text-align: center;
+}
+
+.left-circle {
+  background-color: #E60000;
+}
+
+.right-circle {
+  background-color: #6DCDEE;
+  margin-left: -100px;
+}
+
+.magic {
+  text-align: center;
+  font-family: 'Roboto Condensed', sans-serif;
+  font-size:40px;
+}
