--- a/stylesheets/website.css
+++ b/stylesheets/website.css
@@ -51,8 +51,8 @@ a {
 }*/
 
 #venn div{
-  height: 450px;
-  width: 450px;
+  height: 35vw;
+  width: 35vw;
   border-radius: 50%;
   opacity: .8;
   behavior: url(/stylesheets/PIE.htc);
@@ -66,8 +66,8 @@ a {
 .circle {
   display: inline-block;
   font-family: 'Roboto Condensed', sans-serif;
-  font-size: 50px;
-  line-height: 450px;
+  font-size: 4vw;
+  line-height: 35vw;
   text-align: center;
 }
 
@@ -77,13 +77,13 @@ a {
 
 .right-circle {
   background-color: #6DCDEE;
-  margin-left: -100px;
+  margin-left: -10vw;
 }
 
 .magic {
   text-align: center;
   font-family: 'Roboto Condensed', sans-serif;
-  font-size:40px;
+  font-size: 3vw;
 }
 
 hr {
