--- a/stylesheets/website.css
+++ b/stylesheets/website.css
@@ -32,6 +32,7 @@ a {
 #footer {
   padding-right: 1em;
   padding-left: 1em;
+  padding-bottom: 4em;
   font-family: 'Roboto Condensed', sans-serif;
   position: absolute;
   left: 0;
