--- a/stylesheets/website.css
+++ b/stylesheets/website.css
@@ -171,6 +171,6 @@ hr {
   margin-top: 2em;
 }
 
-button {
-  background-image:url('../website-pics/Dev-Bootcamp.png');
+#dbc-button {
+  background-image:url('website-pics/Dev-Bootcamp.png');
 }
