Add img ids for css

--- a/stylesheets/website.css
+++ b/stylesheets/website.css
@@ -156,17 +156,17 @@ hr {
   text-align: center;
 }
 
-#dbc {
+#dbc-img {
   width: 95%;
   margin-top: 2em;
 }
 
-#berkeley {
+#berkeley-img {
   width: 80%;
   margin-top: 2em;
 }
 
-#mcc {
+#mcc-img {
   width: 75%;
   margin-top: 2em;
 }
