--- a/stylesheets/website.css
+++ b/stylesheets/website.css
@@ -156,17 +156,17 @@ hr {
   text-align: center;
 }
 
-#dbc-img {
+#dbcimg {
   width: 95%;
   margin-top: 2em;
 }
 
-#berkeley-img {
+#berkeleyimg {
   width: 80%;
   margin-top: 2em;
 }
 
-#mcc-img {
+#mccimg {
   width: 75%;
   margin-top: 2em;
 }
