Change logo size to be scalable

--- a/stylesheets/website.css
+++ b/stylesheets/website.css
@@ -142,8 +142,7 @@ hr {
   display: inline;
   padding: 1em;
   padding-bottom: 0;
-  height: 50px;
-  width: 50px;
+  height: 8rem;
 }
 
 /*Education page*/
