--- a/stylesheets/website.css
+++ b/stylesheets/website.css
@@ -126,10 +126,10 @@ hr {
 #artseeimg {
   border-radius: 25px;
   background: url('../website-pics/artsee.png');
-  background-position: left top;
-  background-repeat: repeat;
-  padding: 20px;
-  width: 300px;
+  background-position: center;
+  width: 13.5em;
+  height: 18.5em;
+  margin: auto;
 }
 
 #artsee {
