--- a/stylesheets/website.css
+++ b/stylesheets/website.css
@@ -132,6 +132,15 @@ hr {
   margin: auto;
 }
 
+#vendableimg {
+  border-radius: 25px;
+  background: url('../website-pics/vendable.png');
+  background-position: center;
+  width: 13.5em;
+  height: 18.5em;
+  margin: auto;
+}
+
 #artsee {
   color: #E60000;
 }
