--- a/stylesheets/ie.css
+++ b/stylesheets/ie.css
@@ -114,6 +114,7 @@ form {
 /*Index page- code taken from website.css then modified without vw's*/
 
 #venn div{
+  padding-top: 5em;
   height: 450px;
   width: 450px;
   border-radius: 50%;
