--- a/stylesheets/ie.css
+++ b/stylesheets/ie.css
@@ -140,7 +140,7 @@ form {
 
 .right-circle {
   background-color: #6DCDEE;
-  background: transparent;
+  filter: alpha(opacity=40);
   margin-left: -100px;
 }
 
