--- a/stylesheets/website.css
+++ b/stylesheets/website.css
@@ -92,10 +92,8 @@ section {
   margin-left: -10vw;
 }
 
-.magic {
+#intro {
   text-align: center;
-  font-family: 'Roboto Condensed', sans-serif;
-  font-size: 3.5vw;
 }
 
 hr {
