--- a/stylesheets/ie.css
+++ b/stylesheets/ie.css
@@ -142,7 +142,7 @@ form {
   margin-left: -100px;
 }
 
-.magic {
+#magic {
   text-align: center;
   font-family: 'Roboto Condensed', sans-serif;
   font-size:40px;
