--- a/stylesheets/website.css
+++ b/stylesheets/website.css
@@ -147,6 +147,15 @@ hr {
   margin: auto;
 }
 
+#weatherimg {
+  border-radius: 25px;
+  background: url('../website-pics/Rainyroad.jpg');
+  background-position: center;
+  width: 13.5em;
+  height: 18.5em;
+  margin: auto;
+}
+
 #artsee {
   color: #E60000;
 }
