--- a/stylesheets/blog-stylesheets.css
+++ b/stylesheets/blog-stylesheets.css
@@ -9,14 +9,14 @@
 
 h1 {
   font-size: 50px;
-  font-family: perpetua, georgia;
+  font-family: 'Montserrat', sans-serif;
   font-weight: bold;
   text-align: center;
   margin-bottom: 50px;
 }
 
 h2 {
-  font-family: perpetua, georgia;
+  font-family: 'Montserrat', sans-serif;
   font-weight: bold;
   text-align: center;
 }
@@ -33,12 +33,12 @@ span {
 
 p{
   background-color: white;
-  font-family: perpetua, georgia;
+  font-family: 'Montserrat', sans-serif;
   font-size: 20px;
 }
 
 a {
-  font-family: perpetua, georgia;
+  font-family: 'Montserrat', sans-serif;
   text-decoration: none;
   color: black;
 }
@@ -52,7 +52,7 @@ img {
 
 code {
   background-color: #FFDB4D;
-  font-family: perpetua, georgia;
+  font-family: 'Montserrat', sans-serif;
   font-size: 20px;
 }
 
