--- a/stylesheets/website.css
+++ b/stylesheets/website.css
@@ -7,17 +7,19 @@ img {
 }
 
 h1, h2{
-  font-family: 'Roboto Condensed', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   text-align: center;
+  color: #5c5c5c;
 }
 
 h3 {
-  font-family: 'Roboto Condensed', sans-serif;
+  font-family: 'Montserrat', sans-serif;
+  color: #5c5c5c;
 }
 
 a {
   text-decoration: none;
-  color: black;
+  color: #5c5c5c;
 }
 
 section {
@@ -37,7 +39,7 @@ section {
 #footer {
   padding-right: 1em;
   padding-left: 1em;
-  font-family: 'Roboto Condensed', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   position: absolute;
   left: 0;
   right: 0;
@@ -56,7 +58,7 @@ section {
   background-color: white;
   padding-right: 1em;
   padding-left: 1em;
-  font-family: 'Roboto Condensed', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   left: 0;
   right: 0;
   z-index: 10;
@@ -76,7 +78,7 @@ section {
 
 .circle {
   display: inline-block;
-  font-family: 'Roboto Condensed', sans-serif;
+  font-family: 'Montserrat', sans-serif;
   font-size: 3.5vw;
   line-height: 30vw;
   text-align: center;
