--- a/stylesheets/website.css
+++ b/stylesheets/website.css
@@ -91,11 +91,9 @@ section {
 .right-circle {
   background-color: #6DCDEE;
   margin-left: -10vw;
+  text-align: left;
 }
 
-#magic {
-  font-size: 3.5vw;
-}
 
 #name {
   font-size: 3vw;
@@ -104,13 +102,6 @@ section {
 #intro {
   font-size: 2.5vw;
   text-align: center;
-}
-
-hr {
-    width: 20px;
-    transform: rotate(90deg);
-    -webkit-transform: rotate(90deg);
-    border: 1px solid;
 }
 
 
