--- a/stylesheets/website.css
+++ b/stylesheets/website.css
@@ -36,9 +36,15 @@ p {
   color: #ed4a43;
 }
 
+.blog-entry {
+  margin-top: 4em;
+  border-top: 1px solid #ed4a43;
+}
+
 .entry-date {
   font-size: 2vw;
   color: #6DCDEE;
+  margin: 2em 0;
 }
 
 a {
